gcc/testsuite/g++.dg/cpp0x/vt-34051-2.C
// { dg-do compile { target c++11 } }
template<typename... T> struct A
{
  int i __attribute__((aligned(__alignof(T)))); // { dg-error "parameter packs|T" }
};

A<int> a;
